# quant-personal

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
configs/: default.yaml
configs/data_mappings/: resset_daily_illustrative.yaml  sse_szse_calendar_illustrative.yaml
configs/experiments/: exp_gold_ts.yaml  exp_placeholder.yaml
configs/instruments/: gold_futures.yaml
dashboard/: app_streamlit.py
docs/: GETTING_STARTED.md  architecture.md  data_ingestion.md  how_to_build_a_strategy.md  where_strategy_goes.md
scripts/: make_synthetic_data.py  run_backtest.py  run_paper_demo.py  run_paper_session.py  start.py
src/quant/: __init__.py  __main__.py  app.py  artifacts.py  errors.py  loop.py  report.py  signal.py
src/quant/backtest/: __init__.py  costs.py  engine.py  metrics.py
src/quant/config/: __init__.py  loader.py  schema.py
src/quant/data/: __init__.py  futures_local.py  futures_roll.py  futures_synth.py  local.py  pipeline.py  quality.py  quotes.py  schema.py  sources.py  symbols.py  validate.py
src/quant/data/adjust/: __init__.py  calendar.py  corporate_actions.py  loaders.py  universe.py
src/quant/data/bundle/: __init__.py  catalog.py  freshness.py  manifest.py  manifest.schema.json  migrate.py  provenance.py  store.py
src/quant/execution/: account.py  ashare.py  broker.py  corporate_actions.py  paper.py
src/quant/experiment/: logger.py  metadata.py  run.py
src/quant/features/: __init__.py
src/quant/portfolio/: __init__.py  target.py
src/quant/risk/: checks.py
src/quant/strategy/: __init__.py  base.py  placeholder.py  ts_trend.py
src/quant/utils/: timeutils.py
tests/: conftest.py  test_bundle.py  test_bundle_quote.py  test_core_flows.py  test_corporate_actions.py  test_daily_data_foundation.py  test_daily_loop.py  test_dashboard_state.py  test_error_messages.py  test_mootdx.py  test_next_day_open.py  test_rescued_features.py  test_snapshot_quotes.py  test_status_report.py
tests/fixtures/mootdx/: sh600519_5bars.parquet
(+8 files in other folders)
